# AI-podcaster

./: README.md  app.py  app_oss.py  pyproject.toml
src/podcast/: script_generator.py  script_generator_oss.py  text_to_speech.py
src/web_scraping/: web_scraper.py
