[project]
name = "ai-podcast-generation"
version = "0.1.0"
description = "Transform your documents into engaging AI-generated podcasts"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "python-dotenv>=1.1.1",
    "crewai>=0.193.2",
    "kokoro>=0.9.4",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "firecrawl-py>=4.3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
